--- a/views/verify/index.html
+++ b/views/verify/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <title>Verify</title>
   </head>
   <body>
     <div class="flex items-center justify-center h-screen p-4">
