--- a/views/verify/index.html
+++ b/views/verify/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div class="flex items-center justify-center h-screen p-4">
-      <div class="bg-zinc-300 w-full md:w-2/4 p-4 text-center rounded-lg">
-        <p class="text-xl">Verificando...</p>
+      <div
+        id="bg"
+        class="bg-zinc-300 w-full md:w-2/4 p-4 text-center rounded-lg"
+      >
+        <p id="text-info" class="text-xl">Verificando...</p>
       </div>
     </div>
     <script src="index.js"></script>
