--- a/views/login/index.html
+++ b/views/login/index.html
@@ -21,7 +21,7 @@
       </div>
       <form
         id="form"
-        class="flex flex-col gap-4 bg-teal-200 p-4 shadow-lg rounded-lg w-full md:w-3/5 text-md lg:w-2/4"
+        class="flex flex-col gap-4 bg-teal-200 p-4 shadow-lg rounded-lg w-full md:w-5/12 text-md lg:w-2/4"
       >
         <div class="flex flex-col gap-1">
           <label for="email-input" class="font-bold"
@@ -62,6 +62,6 @@
     </div>
 
     <script src="/components/nav.js"></script>
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
