--- a/views/login/index.html
+++ b/views/login/index.html
@@ -47,6 +47,7 @@
             autocomplete="off"
             class="p-1 rounded-md focus:outline-teal-700"
           />
+          <p id="error-text" class="text-sm text-red-500"></p>
         </div>
 
         <div class="flex justify-center">
@@ -56,7 +57,6 @@
           >
             Iniciar Sesion
           </button>
-          <p id="error-text" class="text-xs text-red-500"></p>
         </div>
       </form>
     </div>
