insertando compras en bd

--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -8,7 +8,7 @@
     <title>Signup</title>
   </head>
   <body>
-    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-teal-700 h-16"></nav>
+    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-gray-800 h-16"></nav>
 
     <div id="notification" class="fixed top-20 right-0 left-0"></div>
 
@@ -24,7 +24,7 @@
       </div>
       <form
         id="form"
-        class="flex flex-col gap-4 bg-teal-200 p-4 shadow-lg rounded-lg text-md lg:w-2/4"
+        class="flex flex-col gap-4 bg-gray-300 p-4 shadow-lg rounded-lg text-md lg:w-2/4"
       >
         <div class="flex flex-col gap-1">
           <label for="name-input" class="font-bold"
@@ -95,7 +95,7 @@
           <button
             id="form-btn"
             disabled
-            class="bg-teal-600 text-white font-semibold px-2 py-1 rounded-lg hover:bg-teal-700 text-center w-2/4 transition ease-in-out cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
+            class="bg-gray-600 text-white font-semibold px-2 py-1 rounded-lg hover:bg-gray-900 text-center w-2/4 transition ease-in-out cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
           >
             Registrar
           </button>
