--- a/views/login/index.html
+++ b/views/login/index.html
@@ -8,7 +8,7 @@
     <title>Login</title>
   </head>
   <body>
-    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-teal-700 h-16"></nav>
+    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-gray-700 h-16"></nav>
     <div
       class="pt-16 h-screen flex max-w-7xl mx-auto justify-center items-center px-4"
     >
@@ -21,7 +21,7 @@
       </div>
       <form
         id="form"
-        class="flex flex-col gap-4 bg-teal-200 p-4 shadow-lg rounded-lg w-full md:w-5/12 text-md lg:w-2/4"
+        class="flex flex-col gap-4 bg-gray-300 p-4 shadow-lg rounded-lg w-full md:w-5/12 text-md lg:w-2/4"
       >
         <div class="flex flex-col gap-1">
           <label for="email-input" class="font-bold"
@@ -53,7 +53,7 @@
         <div class="flex justify-center">
           <button
             id="form-btn"
-            class="bg-teal-600 text-white font-semibold px-2 py-1 rounded-lg hover:bg-teal-700 text-center w-2/4 transition ease-in-out cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
+            class="bg-gray-600 text-white font-semibold px-2 py-1 rounded-lg hover:bg-gray-900 text-center w-2/4 transition ease-in-out cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed"
           >
             Iniciar Sesion
           </button>
