--- a/views/dashboard2/index.html
+++ b/views/dashboard2/index.html
@@ -10,31 +10,25 @@
   <body>
     <aside
       id="default-sidebar"
-      class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
+      class="fixed top-0 left-0 z-40 w-52 h-screen transition-transform -translate-x-full sm:translate-x-0"
       aria-label="Sidebar"
     >
       <div
         id="side"
-        class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800"
+        class="h-screen px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800"
       ></div>
-      ;
     </aside>
 
-    <div class="p-4 sm:ml-64">
+    <div class="p-2 sm:ml-52">
       <div
-        class="p-4 border-2 h-screen border-gray-200 rounded-lg dark:border-gray-700"
+        class="p-2 border-2 h-screen border-gray-200 rounded-lg dark:border-gray-700"
       >
         <div id="titulo"></div>
         <div
           id="div"
-          class="flex items-center justify-center h-auto rounded bg-gray-400"
+          class="flex items-center justify-center h-auto rounded"
         ></div>
-        <div class="flex mt-6">
-          <div
-            id="libros"
-            class="flex items-center justify-center h-auto rounded bg-gray-400"
-          ></div>
-        </div>
+        <div id="libros" class="flex mt-2 h-auto"></div>
       </div>
     </div>
 
