--- a/views/home/index.html
+++ b/views/home/index.html
@@ -7,20 +7,16 @@
     <title>Index</title>
   </head>
   <body>
-    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-teal-700 h-16"></nav>
+    <nav id="navbar" class="fixed top-0 right-0 left-0 bg-gray-800 h-16"></nav>
 
     <div
       class="pt-16 h-screen flex justify-center items-center flex-col md:flex-row lg:w-4/6 md:gap-8 mx-auto px-4 gap-4"
     >
-      <h1 class="text-teal-700 font-bold text-4xl md:text-7xl">Logo</h1>
+      <h1 class="bg-gray-700 font-bold text-4xl md:text-7xl">Logo</h1>
       <div class="flex flex-col gap-4 md:text-xl">
         <p class="text-justify">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-          architecto sequi aliquid repudiandae sed sunt nemo labore veniam sit
-          porro, modi, exercitationem quia asperiores alias amet, quis veritatis
-          neque? Ea error, aspernatur iste eum asperiores fuga, totam vel nulla
-          libero neque adipisci velit ex harum eos quasi vero iure quidem
-          pariatur quaerat perspiciatis soluta
+          La mejor herrmaienta para llevar la contabilidad de tu empresa de
+          forma organizada
         </p>
         <div class="flex justify-around gap-4">
           <a
@@ -29,7 +25,7 @@
             >Loggin</a
           >
           <a
-            class="bg-teal-600 text-white font-semibold px-4 py-2 rounded-lg hover:bg-teal-700 text-center w-2/4 transition ease-in-out"
+            class="bg-gray-500 text-white font-semibold px-4 py-2 rounded-lg hover:bg-gray-800 text-center w-2/4 transition ease-in-out"
             href="/signup/"
             >Signup</a
           >
