--- a/views/home/index.html
+++ b/views/home/index.html
@@ -12,7 +12,7 @@
     <div
       class="pt-16 h-screen flex justify-center items-center flex-col md:flex-row lg:w-4/6 md:gap-8 mx-auto px-4 gap-4"
     >
-      <h1 class="bg-gray-700 font-bold text-4xl md:text-7xl">Logo</h1>
+      <h1 class="text-gray-700 font-bold text-4xl md:text-7xl">Logo</h1>
       <div class="flex flex-col gap-4 md:text-xl">
         <p class="text-justify">
           La mejor herrmaienta para llevar la contabilidad de tu empresa de
