arreglo de la palabra herramienta

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -15,7 +15,7 @@
       <h1 class="text-gray-700 font-bold text-4xl md:text-7xl">Logo</h1>
       <div class="flex flex-col gap-4 md:text-xl">
         <p class="text-justify">
-          La mejor herrmaienta para llevar la contabilidad de tu empresa de
+          La mejor herramienta para llevar la contabilidad de tu empresa de
           forma organizada
         </p>
         <div class="flex justify-around gap-4">
