--- a/views/dashboard2/index.html
+++ b/views/dashboard2/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../styles/output.css" />
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Dashboard</title>
   </head>
