--- a/views/verify/index.html
+++ b/views/verify/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../styles/output.css" />
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>Verify</title>
+    <title>Verificar correo</title>
   </head>
   <body>
     <div class="flex items-center justify-center h-screen p-4">
