update sidebar despliegue y opacidad

--- a/views/dashboard2/index.html
+++ b/views/dashboard2/index.html
@@ -20,7 +20,7 @@
       ></div>
     </aside>
 
-    <div class="p-2 sm:ml-52">
+    <div id="hover" class="p-2">
       <div
         class="p-2 border-2 h-screen border-gray-200 rounded-lg dark:border-gray-700"
       >
