--- a/views/select-company/index.html
+++ b/views/select-company/index.html
@@ -19,7 +19,7 @@
       <div class="flex space-x-4 mt-2">
         <button
           id="continue-btn"
-          class="bg-gray-700 text-white rounded p-2 mt-4 hover:bg-gray-500"
+          class="bg-gray-700 text-white rounded p-2 mt-4 hover:bg-gray-500 cursor-not-allowed"
         >
           Continuar
         </button>
