update preloader login selectCompany y logout

--- a/views/dashboard2/index.html
+++ b/views/dashboard2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/output.css" />
+    <link rel="stylesheet" href="../select-company/index.css" />
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Dashboard</title>
@@ -22,6 +23,7 @@
 
     <div id="hover" class="p-2">
       <div
+        id="preloader"
         class="p-2 border-2 h-screen border-gray-200 rounded-lg dark:border-gray-700"
       >
         <div id="titulo"></div>
