--- a/views/login/index.html
+++ b/views/login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/output.css" />
+    <link rel="stylesheet" href="../select-company/index.css" />
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Login</title>
@@ -11,6 +12,7 @@
   <body>
     <nav id="navbar" class="fixed top-0 right-0 left-0 bg-gray-800 h-16"></nav>
     <div
+      id="preloader"
       class="pt-16 h-screen flex max-w-7xl mx-auto justify-center items-center px-4"
     >
       <div class="hidden lg:flex w-2/4 justify-center items-center">
